--- a/packages/website-vue/package.json
+++ b/packages/website-vue/package.json
@@ -12,6 +12,7 @@
     "@vue/cli-plugin-babel": "4.0.5",
     "@vue/cli-plugin-typescript": "4.0.5",
     "@vue/cli-service": "4.0.5",
+    "core-js": "3.3.4",
     "sass": "1.23.1",
     "sass-loader": "8.0.0",
     "vue": "2.6.10",
