--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,5 +1,5 @@
 {
-  "*.{js,jsx,ts,tsx}": [
+  "*.{js,jsx,ts,tsx},!packages/ui-react/**": [
     "prettier --write",
     "eslint --fix",
     "git add"
