--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -25,11 +25,11 @@
     "@google-cloud/firestore": "3.1.0",
     "apollo-link": "1.2.13",
     "apollo-link-http": "1.5.16",
-    "apollo-server-express": "2.9.14",
+    "apollo-server-cloud-functions": "2.9.14",
+    "apollo-server-fastify": "2.9.14",
     "cross-fetch": "3.0.4",
     "dataloader": "2.0.0",
     "date-fns": "2.8.1",
-    "express": "4.17.1",
     "firebase-admin": "8.9.0",
     "firebase-functions": "3.3.0",
     "graphql": "14.5.8",
