--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
   "extends": ["config:base"],
   "schedule": "before 3am on Monday",
+  "semanticCommits": true,
   "packageRules": [
     {
       "packagePatterns": ["*"],
