--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -31,7 +31,6 @@
     "nock": "12.0.3",
     "raf": "3.4.1",
     "react-test-renderer": "16.13.1",
-    "redux-devtools-extension": "2.13.8",
     "redux-mock-store": "1.5.4",
     "source-map-explorer": "2.4.1",
     "webpack-bundle-analyzer": "3.6.1"
@@ -48,10 +47,12 @@
     "dotenv": "8.2.0",
     "facepaint": "1.2.1",
     "firebase": "7.12.0",
+    "graphql": "14.6.0",
     "graphql.macro": "1.4.2",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-apollo": "3.1.3",
+    "redux-devtools-extension": "2.13.8",
     "react-dom": "16.13.1",
     "react-helmet": "5.2.1",
     "react-redux": "7.2.0",
