--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ script:
 deploy:
   provider: script
   script: lerna run deploy --since
-  cleanup: false
+  skip_cleanup: true
   on:
     branch: master
     condition: $TRAVIS_COMMIT_MESSAGE != *'chore(deps)'*
