--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -24,15 +24,20 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "6.1.0",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
+    "eslint-plugin-react-hooks": "4.1.2",
     "jest-emotion": "10.0.32",
     "jest-enzyme": "7.1.2",
-    "nock": "12.0.3",
+    "nock": "13.0.4",
     "raf": "3.4.1",
     "react-test-renderer": "16.13.1",
     "redux-mock-store": "1.5.4",
     "source-map-explorer": "2.5.0",
+    "typescript": "4.0.3",
     "webpack-bundle-analyzer": "3.9.0"
   },
   "dependencies": {
@@ -47,13 +52,13 @@
     "dotenv": "8.2.0",
     "facepaint": "1.2.1",
     "firebase": "7.22.0",
-    "graphql": "14.7.0",
+    "graphql": "15.3.0",
     "graphql.macro": "1.4.2",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-apollo": "3.1.5",
     "react-dom": "16.13.1",
-    "react-helmet": "5.2.1",
+    "react-helmet": "6.1.0",
     "react-redux": "7.2.1",
     "react-scripts": "3.4.3",
     "redux": "4.0.5",
