:arrow_up: doing a bunch of major upgrades

--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "../../tsconfig",
   "include": ["src/**/*.ts", "src/**/*.tsx", "../ui/dist/types/*.d.ts"],
   "compilerOptions": {
-    "isolatedModules": true
+    "isolatedModules": true,
+    "noFallthroughCasesInSwitch": true,
+    "jsx": "react"
   }
 }
