:art: removing react import and some linting

--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -4,6 +4,6 @@
   "compilerOptions": {
     "isolatedModules": true,
     "noFallthroughCasesInSwitch": true,
-    "jsx": "react"
+    "jsx": "react-jsx"
   }
 }
