--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -24,13 +24,13 @@
     ]
   },
   "devDependencies": {
+    "@emotion/jest": "11.1.0",
     "@types/react-helmet": "6.1.0",
     "@typescript-eslint/eslint-plugin": "4.20.0",
     "@typescript-eslint/parser": "4.20.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
     "eslint-plugin-react-hooks": "4.2.0",
-    "jest-emotion": "11.0.0",
     "jest-enzyme": "7.1.2",
     "nock": "13.0.11",
     "raf": "3.4.1",
@@ -43,6 +43,7 @@
   "dependencies": {
     "@emotion/core": "11.0.0",
     "@emotion/styled": "11.0.0",
+    "@emotion/react": "11.1.4",
     "@mattailes/types": "^4.4.0",
     "@mattailes/typography": "^4.7.11",
     "@mattailes/ui": "^4.8.7",
