--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -3,6 +3,7 @@
   "include": ["src/**/*.ts", "src/**/*.tsx", "../ui/dist/types/*.d.ts"],
   "compilerOptions": {
     "isolatedModules": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "noFallthroughCasesInSwitch": true
   }
 }
