--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "../../tsconfig",
-  "include": ["./index.ts", "./StarWars"]
+  "include": ["./index.ts", "./StarWars", "/typescript/*"]
 }
