--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,15 +1,15 @@
 {
   "*.{js,jsx,ts,tsx}": [
     "prettier --write",
-    "eslint --fix",
+    "eslint --fix"
   ],
   "*.vue": [
-    "prettier --write",
+    "prettier --write"
   ],
   "*.json": [
-    "prettier --write",
+    "prettier --write"
   ],
   "*.{css,scss,sass}": [
-    "prettier --write",
+    "prettier --write"
   ]
 }
