--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,6 +3,6 @@
   "version": "4.4.0",
   "private": true,
   "scripts": {
-    "lint": "../../node_modules/.bin/tslint --project tsconfig.json --fix"
+    "lint": "eslint . --fix --ext .ts,.tsx,.js,.jsx"
   }
 }
