--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -9,7 +9,7 @@
     "coverage": "react-scripts test --env=jsdom --coverage",
     "deploy": "firebase deploy --token $FIREBASE_TOKEN",
     "eject": "react-scripts eject",
-    "lint": "../../node_modules/.bin/tslint --project tsconfig.json --fix",
+    "lint": "eslint ./src --fix --ext .ts,.tsx,.js,.jsx",
     "start": "react-scripts start",
     "test:debug": "react-scripts --inspect-brk test --runInBand --env=jsdom",
     "test": "react-scripts test --env=jsdom"
@@ -25,19 +25,14 @@
   },
   "devDependencies": {
     "@emotion/jest": "11.1.0",
-    "@types/react-helmet": "6.1.0",
-    "@typescript-eslint/eslint-plugin": "4.20.0",
-    "@typescript-eslint/parser": "4.20.0",
     "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.6",
-    "eslint-plugin-react-hooks": "4.2.0",
+    "enzyme-adapter-react-16": "1.15.5",
     "jest-enzyme": "7.1.2",
     "nock": "13.0.11",
     "raf": "3.4.1",
     "react-test-renderer": "17.0.1",
     "redux-mock-store": "1.5.4",
-    "source-map-explorer": "2.5.2",
-    "typescript": "4.2.3",
+    "source-map-explorer": "2.5.1",
     "webpack-bundle-analyzer": "4.3.0"
   },
   "dependencies": {
