--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/jest": "26.0.20",
     "@types/lodash.merge": "4.6.6",
     "@types/node": "12.12.6",
+    "@types/pino": "6.3.5",
     "@types/reach__router": "1.3.7",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
