--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@emotion/eslint-plugin": "11.0.0",
     "@types/enzyme": "3.10.8",
     "@types/jest": "26.0.20",
-    "@types/lodash.merge": "4.6.6",
+    "@types/lodash": "4.14.168",
     "@types/node": "12.12.6",
     "@types/pino": "6.3.5",
     "@types/reach__router": "1.3.7",
