--- a/package.json
+++ b/package.json
@@ -21,12 +21,9 @@
     "coverage": "lerna run coverage",
     "coverage:cleanup": "lerna run coverage:cleanup",
     "storybook": "yarn --cwd packages/ui/ storybook",
-    "lint": "lerna run lint"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "lint": "lerna run lint",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "prettier": {
     "printWidth": 100,
@@ -59,7 +56,7 @@
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-react": "7.23.2",
     "eslint-plugin-react-hooks": "4.2.0",
-    "husky": "4.3.6",
+    "husky": "^6.0.0",
     "lerna": "3.22.1",
     "lint-staged": "10.5.4",
     "prettier": "2.2.1",
